--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 	<body>
 		<h1>savaka</h1>
-		<p><a href="https://github.com/savaka2/scratch-extensions/wiki">Click here for Scratch extension documentations</a></p>
+		<p><a href="https://github.com/savaka2/scratch-extensions">Click here for Scratch extensions</a></p>
 	</body>
 </html>
