Add title to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>Savaka's GitHub Page</title>
+	</head>
 	<body>
 		<h1>savaka</h1>
 		<p><a href="https://github.com/savaka2/scratch-extensions">Click here for Scratch extensions</a></p>
