Add project list with new link to Ext Open

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	</head>
 	<body>
 		<h1>savaka</h1>
-		<p><a href="https://github.com/savaka2/scratch-extensions">Click here for Scratch extensions</a></p>
+		<p>My projects:</p>
+		<ul>
+			<li><a href="https://github.com/savaka2/scratch-extensions">ScratchX extensions</a></li>
+			<li><a href="https://github.com/savaka2/ext-open">Ext Open</a></li>
+		</ul>
 	</body>
 </html>
