Add profile link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	</head>
 	<body>
 		<h1>savaka</h1>
+		<p><a href="https://github.com/savaka2">My profile</a></p>
 		<p>My projects:</p>
 		<ul>
 			<li><a href="https://github.com/savaka2/scratch-extensions">ScratchX extensions</a></li>
