--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<ul>
 			<li><a href="https://github.com/savaka2/scratch-extensions">ScratchX extensions</a></li>
 			<li><a href="https://github.com/savaka2/ext-open">Ext Open</a></li>
+			<li><a href="https://scratch.mit.edu/users/savaka/#comments-18648625">MyScratch profile</a></li>
 		</ul>
 	</body>
 </html>
